# gitlab-mr-check

./: .actrc  .cruft.json  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .security-overrides  Dockerfile.act  Dockerfile.deps  LICENSE  README.md  config.yaml  mkdocs.yml  pyproject.toml  workflow.cmd
.github/workflows/: build-deps-image.yaml  continuous-integration.yaml  publish.yaml
_CI/: .gitignore  README.md  info.py  pyproject.toml
_CI/lib/patches/: path_inject.patch
_CI/tasks/: __init__.py  bootstrap.py  build.py  configuration.py  container.py  develop.py  document.py  format_.py  lint.py  quality.py  release.py  secure.py  shared.py  test.py
docs/: api.md  changelog.md
src/gitlab_mr_check/: __init__.py  cli.py  gitlab_mr_check.py
src/gitlab_mr_check/helpers/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_gitlab_mr_check.py
